@@ -53,6 +53,10 @@ module BinData
     def initialize(parameters = {}, parent = nil)
       super
 
+      initialize_instance
+    end
+
+    def initialize_instance
       @value = nil
     end
 
