@@ -101,6 +101,10 @@ module BinData
     def initialize(parameters = {}, parent = nil)
       super
 
+      initialize_instance
+    end
+
+    def initialize_instance
       @choices = {}
       @last_selection = nil
     end
