@@ -43,6 +43,11 @@ module BinData
     def initialize(parameters = {}, parent = nil)
       super
 
+      initialize_instance
+    end
+
+    def initialize_instance
+
       prototype = get_parameter(:wrapped)
       @wrapped = prototype.instantiate(self)
     end
