@@ -3,6 +3,8 @@
 == Version 1.3.0 (2011-xx-xx)
 
 * Updated specs to rspec-1.3.0
+* Added BinData::Base(#new, #initialize_instance) to speed up
+  instantiation of multiple objects.
 
 == Version 1.2.2 (2010-12-14)
 
